--- a/scenariosconfigui.ui
+++ b/scenariosconfigui.ui
@@ -20,34 +20,46 @@
       <item>
        <widget class="QGroupBox" name="groupBox">
         <property name="title">
-         <string>Material Configurations</string>
+         <string>Escenarios de Materiales</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
-          <widget class="QWidget" name="widget_material_configs" native="true">
-           <layout class="QFormLayout" name="formLayout">
+          <widget class="QWidget" name="widget" native="true">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <layout class="QGridLayout" name="gridLayout">
             <item row="0" column="0">
-             <widget class="QLineEdit" name="lineEdit">
+             <widget class="QLabel" name="label">
               <property name="text">
-               <string>Original</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="0">
-             <widget class="QLineEdit" name="lineEdit_3">
-              <property name="text">
-               <string>Minimum</string>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="0">
-             <widget class="QLineEdit" name="lineEdit_4">
-              <property name="text">
-               <string>MAX</string>
+               <string>Nombre</string>
               </property>
              </widget>
             </item>
             <item row="0" column="1">
+             <widget class="QLabel" name="label_2">
+              <property name="text">
+               <string>Abreviación</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="2">
+             <widget class="QLabel" name="label_3">
+              <property name="text">
+               <string>Remover</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </widget>
+         </item>
+         <item>
+          <widget class="QWidget" name="widget_material_configs" native="true">
+           <layout class="QGridLayout" name="gridLayout_2">
+            <item row="0" column="2">
              <widget class="QPushButton" name="pushButton_4">
               <property name="enabled">
                <bool>false</bool>
@@ -59,11 +71,25 @@
                </size>
               </property>
               <property name="text">
-               <string>Remove</string>
+               <string>Remover</string>
               </property>
              </widget>
             </item>
-            <item row="1" column="1">
+            <item row="2" column="0">
+             <widget class="QLineEdit" name="lineEdit_4">
+              <property name="text">
+               <string>MAX</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="0">
+             <widget class="QLineEdit" name="lineEdit">
+              <property name="text">
+               <string>Original</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="2">
              <widget class="QPushButton" name="pushButton_5">
               <property name="maximumSize">
                <size>
@@ -72,11 +98,18 @@
                </size>
               </property>
               <property name="text">
-               <string>Remove</string>
+               <string>Remover</string>
               </property>
              </widget>
             </item>
-            <item row="2" column="1">
+            <item row="1" column="0">
+             <widget class="QLineEdit" name="lineEdit_3">
+              <property name="text">
+               <string>Minimum</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="2">
              <widget class="QPushButton" name="pushButton_6">
               <property name="maximumSize">
                <size>
@@ -85,7 +118,28 @@
                </size>
               </property>
               <property name="text">
-               <string>Remove</string>
+               <string>Remover</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="1">
+             <widget class="QLineEdit" name="lineEdit_6">
+              <property name="text">
+               <string>or</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="1">
+             <widget class="QLineEdit" name="lineEdit_7">
+              <property name="text">
+               <string>min</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="1">
+             <widget class="QLineEdit" name="lineEdit_8">
+              <property name="text">
+               <string>max</string>
               </property>
              </widget>
             </item>
@@ -95,7 +149,7 @@
          <item>
           <widget class="QPushButton" name="pushButton_new_material">
            <property name="text">
-            <string>Add new Material Scenario</string>
+            <string>Agregar nuevo escenario</string>
            </property>
           </widget>
          </item>
@@ -105,20 +159,73 @@
       <item>
        <widget class="QGroupBox" name="groupBox_2">
         <property name="title">
-         <string>Sismic Configurations</string>
+         <string>Escenarios Sísmicos</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_3">
          <item>
-          <widget class="QWidget" name="widget_sismic_configs" native="true">
-           <layout class="QFormLayout" name="formLayout_2">
+          <widget class="QWidget" name="widget_4" native="true">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <layout class="QGridLayout" name="gridLayout_4">
             <item row="0" column="0">
+             <widget class="QLabel" name="label_4">
+              <property name="text">
+               <string>Nombre</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="1">
+             <widget class="QLabel" name="label_6">
+              <property name="text">
+               <string>Abreviación</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="2">
+             <widget class="QLabel" name="label_5">
+              <property name="text">
+               <string>Remover</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </widget>
+         </item>
+         <item>
+          <widget class="QWidget" name="widget_sismic_configs" native="true">
+           <layout class="QGridLayout" name="gridLayout_3">
+            <item row="2" column="2">
+             <widget class="QPushButton" name="pushButton_8">
+              <property name="maximumSize">
+               <size>
+                <width>70</width>
+                <height>16777215</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>Remover</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="0">
+             <widget class="QLineEdit" name="lineEdit_5">
+              <property name="text">
+               <string>SIS1</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="0">
              <widget class="QLineEdit" name="lineEdit_2">
               <property name="text">
                <string>Original</string>
               </property>
              </widget>
             </item>
-            <item row="0" column="1">
+            <item row="1" column="2">
              <widget class="QPushButton" name="pushButton_7">
               <property name="enabled">
                <bool>false</bool>
@@ -130,27 +237,21 @@
                </size>
               </property>
               <property name="text">
-               <string>Remove</string>
+               <string>Remover</string>
               </property>
              </widget>
             </item>
             <item row="1" column="1">
-             <widget class="QPushButton" name="pushButton_8">
-              <property name="maximumSize">
-               <size>
-                <width>70</width>
-                <height>16777215</height>
-               </size>
-              </property>
+             <widget class="QLineEdit" name="lineEdit_9">
               <property name="text">
-               <string>Remove</string>
+               <string>or</string>
               </property>
              </widget>
             </item>
-            <item row="1" column="0">
-             <widget class="QLineEdit" name="lineEdit_5">
+            <item row="2" column="1">
+             <widget class="QLineEdit" name="lineEdit_10">
               <property name="text">
-               <string>SIS1</string>
+               <string>ss</string>
               </property>
              </widget>
             </item>
@@ -160,7 +261,7 @@
          <item>
           <widget class="QPushButton" name="pushButton_new_sismic">
            <property name="text">
-            <string>Add new Sismic Scenario</string>
+            <string>Agregar nuevo escenario</string>
            </property>
           </widget>
          </item>
