--- a/customfiledialognewlayout.ui
+++ b/customfiledialognewlayout.ui
@@ -14,7 +14,7 @@
    <enum>Qt::StrongFocus</enum>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Cargar archivos de resultados...</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
