Handle Strength functions2

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -162,6 +162,50 @@
         </item>
        </layout>
       </widget>
+      <widget class="QWidget" name="tab_strength_fn">
+       <attribute name="title">
+        <string>Strength Functions</string>
+       </attribute>
+       <layout class="QVBoxLayout" name="verticalLayout_8">
+        <property name="spacing">
+         <number>0</number>
+        </property>
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
+        <item>
+         <widget class="QScrollArea" name="strength_scroll">
+          <property name="widgetResizable">
+           <bool>true</bool>
+          </property>
+          <widget class="QWidget" name="scrollAreaWidgetContents_2">
+           <property name="geometry">
+            <rect>
+             <x>0</x>
+             <y>0</y>
+             <width>975</width>
+             <height>356</height>
+            </rect>
+           </property>
+           <layout class="QVBoxLayout" name="verticalLayoutStrengthFunctions">
+            <property name="spacing">
+             <number>6</number>
+            </property>
+           </layout>
+          </widget>
+         </widget>
+        </item>
+       </layout>
+      </widget>
      </widget>
     </item>
    </layout>
