--- a/gui/scenarios/scenariostrengthfunctionconfig.ui
+++ b/gui/scenarios/scenariostrengthfunctionconfig.ui
@@ -43,6 +43,12 @@
            </sizepolicy>
           </property>
           <layout class="QHBoxLayout" name="horizontalLayout_2">
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
            <item>
             <widget class="QLabel" name="label">
              <property name="sizePolicy">
